# trusted-remote-execution

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.MD  Cargo.toml  PUBLISHING.md  README.md  deny.toml
core/rex-cedar-auth/: CEDAR_POLICY_GUIDE.md  Cargo.toml  README.md
core/rex-cedar-auth/src/: cedar_auth.rs  entities.rs  lib.rs  main.rs  test_utils.rs  users.rs
core/rex-cedar-auth/src/fs/: actions.rs  constants.rs  entities.rs  mod.rs  types.rs
core/rex-cedar-auth/src/network/: actions.rs  entities.rs  mod.rs  types.rs
core/rex-cedar-auth/src/process/: actions.rs  entities.rs  mod.rs  types.rs
core/rex-cedar-auth/src/sysctl/: actions.rs  entities.rs  mod.rs  types.rs
core/rex-cedar-auth/src/sysinfo/: actions.rs  entities.rs  mod.rs  types.rs
core/rex-cedar-auth/src/systemd/: actions.rs  entities.rs  mod.rs  types.rs
core/rex-cedar-auth/tests/: main.rs
core/rex-logger/: Cargo.toml
core/rex-logger/src/: errors.rs  lib.rs  macros.rs
core/rex-logger/src/memory_logger/: config.rs  handler.rs
core/rex-logger/src/tracing_logger/: config.rs  layers.rs  level.rs  logger.rs  mod.rs
core/rex-logger/tests/: memory_log_handler.rs
core/rex-metrics/: Cargo.toml
core/rex-metrics/src/: alarms.rs  common.rs  lib.rs  metrics.rs
core/rex-registrar-utils/: Cargo.toml
core/rex-registrar-utils/src/: execution_context.rs  lib.rs  termination.rs
core/rex-runner/: Cargo.toml  README.md
core/rex-runner-registrar/: Cargo.toml  README.md
core/rex-runner-registrar/policy/: rex_policy.cedar
core/rex-runner-registrar/src/: error_utils.rs  lib.rs  monitoring.rs  rhai_engine_builder.rs  script_alarm_collector.rs  script_metric_alarm_utils.rs  script_metric_collector.rs
core/rex-runner-registrar/tests/: rhai_engine_builder.rs
core/rex-runner/samples/read-file-example/: read-file-args.json  read-file-policy.cedar  read-file.rhai
core/rex-runner/src/: configuration.rs  constants.rs  context.rs  error_handling.rs  execution.rs  io.rs  lib.rs  main.rs  model.rs  monitoring.rs  output_format.rs  utils.rs  validation.rs
core/rex-runner/src/platform/: mod.rs
core/rex-runner/tests/: main.rs  test_utils.rs
core/rex-runner/tests/policy/: rex_policy.cedar
core/rex-runner/tests/rhai-script/: comprehensive_arguments_test.rhai  plain_script.rhai  safe-io.rhai  stdlib_script.rhai
core/rex-sdk-registry/: Cargo.toml
core/rex-sdk-registry/src/: lib.rs
core/rex-test-utils/: Cargo.toml
core/rex-test-utils/fixtures/crypto/: intermediate-ca.pem  server.pem
core/rex-test-utils/src/: assertions.rs  lib.rs
core/rex-test-utils/src/io/: mod.rs
core/rex-test-utils/src/network/: mod.rs
core/rex-test-utils/src/random/: mod.rs
core/rex-test-utils/src/rhai/: common.rs  mod.rs  process_mgmt.rs  safe_io.rs  sysinfo.rs
core/rex-test-utils/tests/: lib.rs
rhai-sdk/rhai-safe-disk-info/: Cargo.toml  build.rs
rhai-sdk/rhai-safe-disk-info/policy/: rex_policy.cedar
rhai-sdk/rhai-safe-disk-info/src/: errors.rs  filesystems.rs  lib.rs
rhai-sdk/rhai-safe-disk-info/src/command/: df.rs  iostat.rs  lsblk.rs  mod.rs
rhai-sdk/rhai-safe-disk-info/src/registry/: common.rs  mod.rs
rhai-sdk/rhai-safe-disk-info/tests/: command.rs  common.rs  filesystems.rs  iostat.rs  registry.rs
rhai-sdk/rhai-safe-disk-info/tests/command/: df.rs  iostat.rs  lsblk.rs
rhai-sdk/rhai-safe-io/: Cargo.toml  build.rs
rhai-sdk/rhai-safe-io/policy/: rex_policy.cedar
rhai-sdk/rhai-safe-io/src/: dir_entry.rs  elf_info.rs  errors.rs  execute.rs  gzip.rs  lib.rs  registry.rs  safe_io.rs  truncate.rs  utils.rs
rhai-sdk/rhai-safe-io/tests/: command.rs  core_dump_analysis.rs  dir_entry.rs  execute.rs  safe_io.rs  safe_io_registry.rs
rhai-sdk/rhai-safe-network/: Cargo.toml
rhai-sdk/rhai-safe-network/src/: client.rs  errors.rs  lib.rs  netstat_types.rs  network.rs
rhai-sdk/rhai-safe-network/tests/: client.rs  command.rs  network.rs  registry.rs
rhai-sdk/rhai-safe-process-mgmt/: Cargo.toml
rhai-sdk/rhai-safe-process-mgmt/policy/: rex_policy.cedar
rhai-sdk/rhai-safe-process-mgmt/src/: errors.rs  lib.rs  process.rs  signal.rs  state.rs  systemctl.rs
rhai-sdk/rhai-safe-process-mgmt/tests/: command.rs  safe_process.rs  safe_process_registry.rs
rhai-sdk/rhai-safe-system-info/: Cargo.toml  build.rs
rhai-sdk/rhai-safe-system-info/policy/: rex_policy.cedar
rhai-sdk/rhai-safe-system-info/src/: errors.rs  kernel_stats.rs  lib.rs  sysctl.rs  system_info.rs  transport_protocol.rs
rhai-sdk/rhai-safe-system-info/tests/: command.rs  dmesg.rs  dns.rs  kernel_stats.rs  memory.rs  ncproc.rs  slabinfo.rs  sysctl.rs  uname.rs
rhai-sdk/rhai-sdk-common-utils/: Cargo.toml  build.rs
rhai-sdk/rhai-sdk-common-utils/src/: args.rs  common_types.rs  duration.rs  errors.rs  lib.rs  random.rs  registry.rs
rhai-sdk/rhai-sdk-common-utils/tests/: datetime.rs  random.rs
rust-sdk/safe-disk-info/: Cargo.toml
rust-sdk/safe-disk-info/src/: auth.rs  constants.rs  diskinfo.rs  errors.rs  lib.rs  options.rs  utils.rs
rust-sdk/safe-disk-info/tests/: errors.rs  lib.rs
rust-sdk/safe-io/: Cargo.toml
rust-sdk/safe-io/src/: auth.rs  constants.rs  dir_entry.rs  errors.rs  execute.rs  lib.rs  options.rs  recursive.rs  redaction.rs
rust-sdk/safe-io/tests/: dir_entry.rs  execute.rs  lib.rs
rust-sdk/safe-network/: Cargo.toml
rust-sdk/safe-network/src/: auth.rs  client.rs  errors.rs  lib.rs  network.rs
rust-sdk/safe-network/tests/: errors.rs  netstat.rs
rust-sdk/safe-process-mgmt/: Cargo.toml
rust-sdk/safe-process-mgmt/src/: auth.rs  constants.rs  errors.rs  lib.rs  options.rs  systemctl.rs
rust-sdk/safe-process-mgmt/tests/: lib.rs
rust-sdk/safe-system-info/: Cargo.toml
rust-sdk/safe-system-info/src/: auth.rs  dns.rs  errors.rs  lib.rs  options.rs  system.rs
rust-sdk/safe-system-info/tests/: dmesg.rs  dns.rs  errors.rs  kernel_stats.rs  memory.rs  ncproc.rs  slabinfo.rs  sysctl.rs  uname.rs
rust-sdk/sdk-common-utils/: Cargo.toml
rust-sdk/sdk-common-utils/src/: cedar_auth.rs  constants.rs  errors.rs  lib.rs  random.rs
rust-sdk/sdk-common-utils/tests/: datetime.rs  random.rs
(+320 files in other folders)
