[package]
name = "rex-cedar-auth"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
test-utils = ["rex-policy-schema"]

[[bin]]
name = "cedar-policy-validator"
path = "src/main.rs"

[dependencies]
serde = "1"
serde_json = "1"
anyhow = "1"
cedar-policy = "4"
derive_builder = "0.20"
uuid = { version = "1", features = ["v4"] }
whoami = "1"
clap = { version = "4", features = ["derive"] }
rex-policy-schema = { path = "../rex-policy-schema", optional = true }
rex-logger = { path = "../rex-logger", version = "*" }

[dev-dependencies]
rstest = "0"
tempfile = "3"
rex-cedar-auth = { path = ".", version = "*", features = ["test-utils"] }
rex-test-utils = { path = "../rex-test-utils", version = "*" }
