[package]
name = "rex-logger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured logging with tracing and in-memory log capture for REX"

[dependencies]
anyhow = "1.0"
derive_builder = "0.20"
syslog-tracing = "0.3"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "json",
] }
tracing-appender = "0.2"
rstest = "0.26"
thiserror = "2.0"
chrono = "0.4"
serde = "1"
bounded-vec-deque = "0.1"

[dev-dependencies]
sealed_test = "1.1"
tempfile = "3.0"
