[package]
name = "rex-runner"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
rhai = "1.20"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
whoami = "1.4"
strum_macros = { version = "0.27", default-features = false }

# Monorepo path dependencies
rex-policy-schema = { path = "../rex-policy-schema" }
rex-cedar-auth = { path = "../rex-cedar-auth" }
rex-runner-registrar = { path = "../rex-runner-registrar" }
rex-metrics-and-alarms = { path = "../rex-metrics" }
rex-logger = { path = "../rex-logger" }
rust-sdk-common-utils = { path = "../../rust-sdk/sdk-common-utils" }
rhai-safe-io = { path = "../../rhai-sdk/rhai-safe-io" }
rust-safe-io = { path = "../../rust-sdk/safe-io" }

[dev-dependencies]
serde_json = "1.0"
rex-cedar-auth = { path = "../rex-cedar-auth", features = ["test-utils"] }
rex-test-utils = { path = "../rex-test-utils" }
mockall = "0.13"
rstest = "0.24"
sealed_test = "1.1"
tempfile = "3.0"
assertables = "9.5"
assert_fs = "1.1"

[[bin]]
name = "rex-runner"
path = "src/main.rs"
