[package]
name = "rex-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "REX trusted remote execution runner — executes policy-authorized Rhai scripts"

[dependencies]
anyhow = "1.0"
rhai = "1.20"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
whoami = "1.4"
strum_macros = { version = "0.27", default-features = false }

# Monorepo path dependencies
rex-policy-schema = { path = "../rex-policy-schema", version = "0.1.0" }
rex-cedar-auth = { path = "../rex-cedar-auth", version = "0.1.0" }
rex-runner-registrar = { path = "../rex-runner-registrar", version = "0.1.0" }
rex-metrics-and-alarms = { path = "../rex-metrics", version = "0.1.0" }
rex-logger = { path = "../rex-logger", version = "0.1.0" }
rust-sdk-common-utils = { path = "../../rust-sdk/sdk-common-utils", version = "0.1.0" }
rhai-safe-io = { path = "../../rhai-sdk/rhai-safe-io", version = "0.1.0" }
rust-safe-io = { path = "../../rust-sdk/safe-io", version = "0.1.0" }

[dev-dependencies]
serde_json = "1.0"
rex-cedar-auth = { path = "../rex-cedar-auth", version = "0.1.0", features = ["test-utils"] }
rex-test-utils = { path = "../rex-test-utils", version = "0.1.0" }
mockall = "0.13"
rstest = "0.24"
sealed_test = "1.1"
tempfile = "3.0"
assertables = "9.5"
assert_fs = "1.1"

[[bin]]
name = "rex-runner"
path = "src/main.rs"
