[package]
name = "rhai-safe-disk-info"
version.workspace = true
edition.workspace = true

publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "*" }
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*" }
rust-disk-info = { path = "../../rust-sdk/safe-disk-info", version = "*" }
rust-safe-io = { path = "../../rust-sdk/safe-io", version = "*" }
rex-logger = { path = "../../core/rex-logger", version = "*" }
anyhow = "1"
derive_builder = "0"
rhai = { version = "1", features = ["serde"] }
rstest = "0"
strum = "0.27"
strum_macros = "0.27"
nix = "0.30"

[dev-dependencies]
rex-test-utils = { path = "../../core/rex-test-utils", version = "*" }
serde_json = "1"

[build-dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "*", features = [
    "build-validation",
] }
