[package]
name = "rhai-safe-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rhai bindings for safe filesystem I/O access in REX scripts"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "0.1.0" }
rust-sdk-common-utils = { path = "../../rust-sdk/sdk-common-utils", version = "0.1.0" }
rust-safe-io = { path = "../../rust-sdk/safe-io", version = "0.1.0" }
anyhow = "1.0.94"
assertables = "9.5.0"
assert_fs = "1.1.2"
cfg-if = "1"
rhai-sdk-common-utils = { path = "../rhai-sdk-common-utils", version = "0.1.0" }
rhai = { version = "1", features = ["serde"] }
rstest = "0.18.2"
cap-std = "3.4.2"
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "0.1.0" }
rex-logger = { path = "../../core/rex-logger", version = "0.1.0" }
derive_builder = "0.20.2"
handlebars = "6.3.1"
serde_json = "1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tar = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
rust-system-info = { path = "../../rust-sdk/safe-system-info", version = "0.1.0" }
rust-disk-info = { path = "../../rust-sdk/safe-disk-info", version = "0.1.0" }
rust-network = { path = "../../rust-sdk/safe-network", version = "0.1.0" }
caps = "0.5"
rust-safe-process-mgmt = { path = "../../rust-sdk/safe-process-mgmt", version = "0.1.0" }
rustix = { version = "1.0", features = ["process"] }

[dev-dependencies]
rex-test-utils = { path = "../../core/rex-test-utils", version = "0.1.0" }
rhai-sdk-common-utils = { path = "../rhai-sdk-common-utils", version = "0.1.0" }
rhai = { version = "1", features = ["metadata"] }

[build-dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "0.1.0", features = [
    "build-validation",
] }
