[package]
name = "rhai-safe-network"
version.workspace = true
edition.workspace = true

publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*" }
rex-logger = { path = "../../core/rex-logger", version = "*" }
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "*" }
rust-network = { path = "../../rust-sdk/safe-network", version = "*" }
rust-system-info = { path = "../../rust-sdk/safe-system-info", version = "*" }
rhai-safe-system-info = { version = "*", path = "../rhai-safe-system-info" }
anyhow = "1"
rhai = { version = "1", features = ["serde"] }
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
rex-test-utils = { path = "../../core/rex-test-utils", version = "*" }
httpmock = "0.8"
rstest = "0.18"
serde_json = "1"

[build-dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "*", features = [
    "build-validation",
] }
