[package]
name = "rhai-safe-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rhai bindings for safe network operations in REX scripts"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "0.1.0" }
rex-logger = { path = "../../core/rex-logger", version = "0.1.0" }
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "0.1.0" }
rust-safe-network = { path = "../../rust-sdk/safe-network", version = "0.1.0" }
rust-safe-system-info = { path = "../../rust-sdk/safe-system-info", version = "0.1.0" }
rhai-safe-system-info = { version = "0.1.0", path = "../rhai-safe-system-info" }
anyhow = "1"
rhai = { version = "1", features = ["serde"] }
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
rex-test-utils = { path = "../../core/rex-test-utils", version = "0.1.0" }
httpmock = "0.8"
rstest = "0.18"
serde_json = "1"

[build-dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "0.1.0", features = [
    "build-validation",
] }
