[package]
name = "rhai-safe-process-mgmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rhai bindings for safe process management in REX scripts"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "0.1.0" }
rust-safe-process-mgmt = { path = "../../rust-sdk/safe-process-mgmt", version = "0.1.0" }
rust-safe-io = { path = "../../rust-sdk/safe-io", version = "0.1.0" }
anyhow = "1.0.94"
assertables = "9.5.2"
assert_fs = "1.1.2"
rhai = { version = "1.20.1", features = ["serde"] }
rhai-sdk-common-utils = { path = "../rhai-sdk-common-utils", version = "0.1.0" }
rstest = "0.25.0"
serde = "1"
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "0.1.0" }
rex-logger = { path = "../../core/rex-logger", version = "0.1.0" }
derive_builder = "0.20.2"
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
rustix = { version = "1.0", features = ["process"] }

[dev-dependencies]
rex-test-utils = { path = "../../core/rex-test-utils", version = "0.1.0" }

[build-dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "0.1.0", features = [
    "build-validation",
] }
