[package]
name = "rhai-safe-system-info"
version.workspace = true
edition.workspace = true

publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "*" }
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*" }
rust-system-info = { path = "../../rust-sdk/safe-system-info", version = "*" }
rex-logger = { path = "../../core/rex-logger", version = "*" }
anyhow = "1"
derive-getters = "0.5"
derive_builder = "0"
rhai = { version = "1", features = ["serde"] }
serde = { version = "1" }
strum = "0.27"
strum_macros = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false }

[dev-dependencies]
rex-test-utils = { path = "../../core/rex-test-utils", version = "*" }
rhai-sdk-common-utils = { path = "../rhai-sdk-common-utils", version = "*" }
rstest = "0"
serde_json = "1"

[build-dependencies]
rex-runner-registrar-utils = { path = "../../core/rex-registrar-utils", version = "*", features = [
    "build-validation",
] }
