[package]
name = "rust-disk-info"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
sysinfo = { version = "0.35", features = ["linux-tmpfs", "linux-netdevs"] }
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*" }
rust-sdk-common-utils = { version = "*", path = "../sdk-common-utils" }
derive_builder = "0.20"
anyhow = "1.0"
cedar-policy = "4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
derive-getters = "0.5"
cfg-if = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["fs"] }
procfs = { version = "0.17", default-features = false }
rustix = { version = "1", features = ["mount"] }

[dev-dependencies]
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*", features = [
    "test-utils",
] }
rex-test-utils = { path = "../../core/rex-test-utils", version = "*" }
