[package]
name = "rust-network"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*" }
rex-logger = { path = "../../core/rex-logger", version = "*" }
rust-sdk-common-utils = { version = "*", path = "../sdk-common-utils" }
rust-system-info = { version = "*", path = "../safe-system-info" }
anyhow = "1"
cedar-policy = "4"
derive-getters = "0.5"
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.35" }
thiserror = "2"
cfg-if = "1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false }

[dev-dependencies]
rex-test-utils = { path = "../../core/rex-test-utils", version = "*" }
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*", features = [
    "test-utils",
] }
httpmock = "0.8"
rstest = "0.18"
