[package]
name = "rust-safe-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe network operations SDK for REX with Cedar authorization"

[dependencies]
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "0.1.0" }
rex-logger = { path = "../../core/rex-logger", version = "0.1.0" }
rust-sdk-common-utils = { version = "0.1.0", path = "../sdk-common-utils" }
rust-safe-system-info = { version = "0.1.0", path = "../safe-system-info" }
anyhow = "1"
cedar-policy = "4"
derive-getters = "0.5"
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.35" }
thiserror = "2"
cfg-if = "1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false }

[dev-dependencies]
rex-test-utils = { path = "../../core/rex-test-utils", version = "0.1.0" }
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "0.1.0", features = [
    "test-utils",
] }
httpmock = "0.8"
rstest = "0.18"
