[package]
name = "rust-safe-process-mgmt"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.94"
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*" }
rex-logger = { path = "../../core/rex-logger", version = "*" }
rust-sdk-common-utils = { version = "*", path = "../sdk-common-utils" }
rust-safe-io = { path = "../safe-io", version = "*" }
cedar-policy = "4.2"
rustix = { version = "1.0", features = ["process"] }
strum_macros = "0.27"
sysinfo = { version = "0.35", default-features = false, features = [
    "system",
    "user",
] }
serde_json = "1.0"
derive_builder = "0.20"
thiserror = "2"
derive-getters = "0.5"
zbus = { version = "5", features = ["blocking"] }
zvariant = "5"
tracing = "0.1"

[target.'cfg(any(target_os = "linux"))'.dependencies]
caps = "0.5"
procfs = "0.17"
nix = { version = "0.30", features = ["process", "sched", "fs"] }

[dev-dependencies]
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "*", features = [
    "test-utils",
] }
rex-test-utils = { path = "../../core/rex-test-utils", version = "*" }
tracing = "0.1"
tracing-subscriber = "0.3"
cargo-deny = "0.19"
assertables = "9.5.2"
assert_fs = "1.1.2"
rstest = "0.26"
tempfile = "3"
memmap2 = "0.9"
