[package]
name = "rust-sdk-common-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common utilities shared across REX Rust SDK crates"

[dependencies]
rex-cedar-auth = { path = "../../core/rex-cedar-auth", version = "0.1.0" }
cedar-policy = "*"
time = { version = "0.3", features = ["formatting", "macros"] }
derive-getters = "0.5"
serde = "1"
anyhow = "1.0"
rex-logger = { path = "../../core/rex-logger", version = "0.1.0" }
serde_json = "1.0"
thiserror = "2"
rand = "0.9"
# Signal handling dependencies
signal-hook = { version = "0.3", default-features = false }

[dev-dependencies]
assertables = "9.5"
assert_fs = "1.1"
rstest = "0.26"
rex-test-utils = { path = "../../core/rex-test-utils", version = "0.1.0" }
